content/02/02.03/script.js.adoc
include::./title.adoc[]

shot::[1]
Before we get started make sure you have a modern version of NodeJs,
shot::[2]
and NPM installed:

[source,bash]
----
$ node -v
$ npm -v
----

If you see an error message when you run these commands, you’ll need to fix your Node installation.

Go back to the command prompt and create a new directory for our project:

[source,bash]
----
$ mkdir shouty
----

// TODO: remove reference to editor
Go use cd to go into that directory, and open it up in your editor:

shot::[3]
First we’ll create a `package.json` that describes the NPM packages we need for our project
shot::[4]
and add the `cucumber` package to it.

[source,bash]
----
$ npm init -y
$ npm install -D cucumber
----

shot::[]
We'll  also add `cucumber-pretty`, which will prettify our output.

----
$ npm install -D cucumber-pretty
----


We can now run  the `cucumber-js -f node_modules/cucumber-pretty` command to see if everything works:

[source,bash]
----
$ ./node_modules/.bin/cucumber-js -f node_modules/cucumber-pretty
----

But this is not very user friendly. There's a nicer way to run cucumber.

Edit `package.json` and change the `test` line under the `scripts` from it's default to `cucumber-js`

[source,javascript]
----
{
  // ...
  "scripts": {
    "test": "cucumber-js -f node_modules/cucumber-pretty"
  },
  // ...
}
----

Now we’re ready! If we run `npm test` at this point, we’ll see cucumber pass with no scenarios or steps to run:

// TODO: add output
[source,bash]
----
$ npm test

> shouty-js@1.0.0 test /home/fedex/cucumber/shouty-js
> cucumber-js -f node_modules/cucumber-pretty

0 scenarios
0 steps
0m00.000s


   ╭────────────────────────────────────────────────────────────────╮
   │                                                                │
   │      New patch version of npm available! 6.13.6 → 6.13.7       │
   │   Changelog: https://github.com/npm/cli/releases/tag/v6.13.7   │
   │               Run npm install -g npm to update!                │
   │                                                                │
   ╰────────────────────────────────────────────────────────────────╯

----

Good, we've installed Cucumber. Now we need to write our specification.
